added 1 & 2 to vocab specs

--- a/index.html
+++ b/index.html
@@ -834,6 +834,89 @@ I decided to create a new application profile because I could not find a pre-exi
     <div id="vocab">
         <h1>Vocabulary Specification</h1>
             <h2>Local Vocabulary for "Category"</h2>
+<!-- Table -->
+						<section>
+							<h2>#1</h2>
+							<div>
+								<table class="w3-table w3-striped">
+									<thead>
+										<tr>
+											<th></th>
+											<th></th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td width="30%">Term Name</td>
+											<td>Home Improvement</td>	
+										</tr>
+										<tr>
+											<td>URI</td>
+											<td>https://www.utk.edu/elements/categoryvocabulary/homeimprovement </td>
+										</tr>
+										<tr>
+											<td>Label</td>
+											<td>Home Improvement</td>
+										</tr>										
+										<tr>
+											<td>Definition</td>
+											<td>Anything that involves modifying the structure of a home or other building.</td>
+										</tr>
+										<tr>
+											<td>Comments</td>
+											<td></td>
+										</tr>
+										<tr>
+											<td>Member of</td>
+											<td>http://purl.org/dc/elements/1.1/subject/category</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+					</section>
+<!-- Table -->
+<!-- Table -->
+						<section>
+							<h2>#2</h2>
+							<div>
+								<table class="w3-table w3-striped">
+									<thead>
+										<tr>
+											<th></th>
+											<th></th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td width="30%">Term Name</td>
+											<td>gardening & plants</td>	
+										</tr>
+										<tr>
+											<td>URI</td>
+											<td>https://www.utk.edu/elements/categoryvocabulary/gardeningplants </td>
+										</tr>
+										<tr>
+											<td>Label</td>
+											<td>Gardening & Plants</td>
+										</tr>										
+										<tr>
+											<td>Definition</td>
+											<td>Anything that involves gardening and plant care.</td>
+										</tr>
+										<tr>
+											<td>Comments</td>
+											<td></td>
+										</tr>
+										<tr>
+											<td>Member of</td>
+											<td>http://purl.org/dc/elements/1.1/subject/category</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+					</section>
+<!-- Table -->	    
+	    
 
     </div>
     <div id="downloads">
