added 3-8 vocab specs

--- a/index.html
+++ b/index.html
@@ -916,8 +916,253 @@ I decided to create a new application profile because I could not find a pre-exi
 							</div>
 					</section>
 <!-- Table -->	    
+<!-- Table -->
+						<section>
+							<h2>#3</h2>
+							<div>
+								<table class="w3-table w3-striped">
+									<thead>
+										<tr>
+											<th></th>
+											<th></th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td width="30%">Term Name</td>
+											<td>outdoors</td>	
+										</tr>
+										<tr>
+											<td>URI</td>
+											<td>https://www.utk.edu/elements/categoryvocabulary/outdoors </td>
+										</tr>
+										<tr>
+											<td>Label</td>
+											<td>Outdoors</td>
+										</tr>										
+										<tr>
+											<td>Definition</td>
+											<td>Anything that involves outdoor work that is not gardening such as yard work and building structures like a gazebo.</td>
+										</tr>
+										<tr>
+											<td>Comments</td>
+											<td>Modification and maintenance of the outside structure of a home should be in Home Improvement. Any structure not attached to the home should be in Outdoors. </td>
+										</tr>
+										<tr>
+											<td>Member of</td>
+											<td>http://purl.org/dc/elements/1.1/subject/category</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+					</section>
+<!-- Table -->		    
+<!-- Table -->
+						<section>
+							<h2>#4</h2>
+							<div>
+								<table class="w3-table w3-striped">
+									<thead>
+										<tr>
+											<th></th>
+											<th></th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td width="30%">Term Name</td>
+											<td>interior design</td>	
+										</tr>
+										<tr>
+											<td>URI</td>
+											<td>hhttps://www.utk.edu/elements/categoryvocabulary/interiordesign </td>
+										</tr>
+										<tr>
+											<td>Label</td>
+											<td>Interior Design</td>
+										</tr>										
+										<tr>
+											<td>Definition</td>
+											<td>Anything that involves the design and decoration of an interior space.</td>
+										</tr>
+										<tr>
+											<td>Comments</td>
+											<td></td>
+										</tr>
+										<tr>
+											<td>Member of</td>
+											<td>http://purl.org/dc/elements/1.1/subject/category</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+					</section>
+<!-- Table -->	
+<!-- Table -->
+						<section>
+							<h2>#5</h2>
+							<div>
+								<table class="w3-table w3-striped">
+									<thead>
+										<tr>
+											<th></th>
+											<th></th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td width="30%">Term Name</td>
+											<td>party</td>	
+										</tr>
+										<tr>
+											<td>URI</td>
+											<tdhttps://www.utk.edu/elements/categoryvocabulary/party </td>
+										</tr>
+										<tr>
+											<td>Label</td>
+											<td>Party</td>
+										</tr>										
+										<tr>
+											<td>Definition</td>
+											<td>Anything related to a party such as decorations and games.</td>
+										</tr>
+										<tr>
+											<td>Comments</td>
+											<td>Holiday themes should be included in Party and not Interior Design. </td>
+										</tr>
+										<tr>
+											<td>Member of</td>
+											<td>http://purl.org/dc/elements/1.1/subject/category</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+					</section>
+<!-- Table -->		
+<!-- Table -->
+						<section>
+							<h2>#6</h2>
+							<div>
+								<table class="w3-table w3-striped">
+									<thead>
+										<tr>
+											<th></th>
+											<th></th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td width="30%">Term Name</td>
+											<td>furniture</td>	
+										</tr>
+										<tr>
+											<td>URI</td>
+											<td>https://www.utk.edu/elements/categoryvocabulary/furniture </td>
+										</tr>
+										<tr>
+											<td>Label</td>
+											<td>Furniture</td>
+										</tr>										
+										<tr>
+											<td>Definition</td>
+											<td>Anything involving the modification or creation of furniture.</td>
+										</tr>
+										<tr>
+											<td>Comments</td>
+											<td>Both indoor and outdoor furniture are included.</td>
+										</tr>
+										<tr>
+											<td>Member of</td>
+											<td>http://purl.org/dc/elements/1.1/subject/category</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+					</section>
+<!-- Table -->
+<!-- Table -->
+						<section>
+							<h2>#7</h2>
+							<div>
+								<table class="w3-table w3-striped">
+									<thead>
+										<tr>
+											<th></th>
+											<th></th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td width="30%">Term Name</td>
+											<td>cooking</td>	
+										</tr>
+										<tr>
+											<td>URI</td>
+											<td>https://www.utk.edu/elements/categoryvocabulary/cooking </td>
+										</tr>
+										<tr>
+											<td>Label</td>
+											<td>Cooking</td>
+										</tr>										
+										<tr>
+											<td>Definition</td>
+											<td>Anything related to cooking such as recipes and maintenance of kitchen tools.</td>
+										</tr>
+										<tr>
+											<td>Comments</td>
+											<td></td>
+										</tr>
+										<tr>
+											<td>Member of</td>
+											<td>http://purl.org/dc/elements/1.1/subject/category</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+					</section>
+<!-- Table -->
+<!-- Table -->
+						<section>
+							<h2>#8</h2>
+							<div>
+								<table class="w3-table w3-striped">
+									<thead>
+										<tr>
+											<th></th>
+											<th></th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td width="30%">Term Name</td>
+											<td>toys</td>	
+										</tr>
+										<tr>
+											<td>URI</td>
+											<td>https://www.utk.edu/elements/categoryvocabulary/toys </td>
+										</tr>
+										<tr>
+											<td>Label</td>
+											<td>Toys</td>
+										</tr>										
+										<tr>
+											<td>Definition</td>
+											<td>Anything related to the modification or creation of toys.</td>
+										</tr>
+										<tr>
+											<td>Comments</td>
+											<td>Toys are objects of entertainment or stimulation for adults, children, or pets.</td>
+										</tr>
+										<tr>
+											<td>Member of</td>
+											<td>http://purl.org/dc/elements/1.1/subject/category</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+					</section>
+<!-- Table -->	   
 	    
-
     </div>
     <div id="downloads">
         <h1>Downloads</h1>
