add links for downloads

--- a/index.html
+++ b/index.html
@@ -1167,10 +1167,10 @@ I decided to create a new application profile because I could not find a pre-exi
     <div id="downloads">
         <h1>Downloads</h1>
         <p>
-            XSD file
+		<a href="https://zyas19.github.io/Assignment4Schema_Stoss3.xsd">XSD file</a>
         </p>
         <p>
-            XML file
+		<a href="">XML file</a>
         </p>
     </div>
     <div id="essay">
