add associated XSD files

--- a/index.html
+++ b/index.html
@@ -1167,7 +1167,8 @@ I decided to create a new application profile because I could not find a pre-exi
     <div id="downloads">
         <h1>Downloads</h1>
         <p>
-		<a href="https://zyas19.github.io/Assignment4Schema_Stoss3.xsd">XSD file</a>
+		<a href="https://zyas19.github.io/Assignment4Schema_Stoss3.xsd">XSD schema file</a>
+		<span style="display:inline-block; width:WIDTH;"><a href="">associated Dublin Core XSD file</a></span>
         </p>
         <p>
 		<a href="">XML file</a>
