add table to downloads

--- a/index.html
+++ b/index.html
@@ -1171,7 +1171,15 @@ I decided to create a new application profile because I could not find a pre-exi
         </p>
 	    <p>
 		    <span style="display:inline-block; width:WIDTH;"><a href="">associated Dublin Core XSD file</a></span>
-	    </p>	    
+	    </p>
+	    <table>
+		    <thead>
+			    <tr>
+				    <th>Namespace XSD files<th>
+			    </tr>
+		    <tr>
+			    <td><a href="">associated Dublin Core XSD file</a><td>
+		    </tr>     		    
         <p>
 		<a href="">XML file</a>
         </p>
