update downloads table, add essay text

--- a/index.html
+++ b/index.html
@@ -1169,9 +1169,9 @@ I decided to create a new application profile because I could not find a pre-exi
         <p>
 		<a href="https://zyas19.github.io/Assignment4Schema_Stoss3.xsd">XSD schema file</a>
         </p>
-	    <p>
-		    <span style="display:inline-block; width:WIDTH;"><a href="">associated Dublin Core XSD file</a></span>
-	    </p>
+	<p>
+		<a href="">Dublin Core XSD file</a>
+	</p>	
 	    <table>
 		    <thead>
 			    <tr>
@@ -1179,7 +1179,8 @@ I decided to create a new application profile because I could not find a pre-exi
 			    </tr>
 		    <tr>
 			    <td><a href="">associated Dublin Core XSD file</a><td>
-		    </tr>     		    
+		    </tr>  
+	    </table>
         <p>
 		<a href="">XML file</a>
         </p>
@@ -1187,8 +1188,17 @@ I decided to create a new application profile because I could not find a pre-exi
     <div id="essay">
         <h1>Essay</h1>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+           The process of creating an application profile was challenging but I learned a lot about metadata along the way. I started with a domain analysis to determine what elements I needed. The analysis was similar to UX testing, which I was already familiar with, in that I did a basic review of a couple of websites with a similar application and determined what worked and what needed improvement. My focus in the domain analysis was much narrower than that of a real UX test however since I was only evaluating metadata elements. I enjoyed this part of the process because it was similar to an activity I was already familiar with. Next, I set about creating the element specification set and matching my chosen elements to namespaces. I found that starting with the Dublin Core set of elements made this task much easier because it helped me to realize that my elements were too narrowly focused for my audience. Dublin Core is so prevalent because of its simplicity and since my application involves asking users to add metadata values I thought simplifying my expectations made sense. In the simplification process I was able to match many of my elements to pre-existing Dublin Core elements. For the elements that didn’t match the Art and Architecture Thesaurus (AAT) was used as a namespace. Dr. Dobreski pointed out to me however that AAT is meant to be used as a controlled vocabulary. This fact seems clear to me now but it really wasn’t when I first started this process. Instead I opted to use a combination of CDWALite and a local namespace defined at UTK. I know that many of my classmates struggled with the idea of the local namespace but I felt that I was able to grasp this concept early on and that is likely due to the fact that I needed it for several elements like Rating and Number of Raters.  
+        </p> 
+	<p>    
+	   In assignment 3 we moved on to creating an XSD file. I really appreciated the reverse engineering technique that was shown in class because it started us with an XML file, something we had worked with before. I found creating the basic XSD file simple and decided to try adding namespace values. This presented a challenge for me. A few emails with Dr. Dobreski later I managed to successfully create a working XSD file though I’m not sure what I had done wrong the first time. Along with my XSD file 3 namespace XSD files were also created. In order to edit the attributes on my application profile XSD I first had to edit them on the namespace XSD files. This was a bit difficult to figure out and also meant that when sharing my XSD file I had to include the other 3 XSD files or else my attributes would show an error. 
+	    </p>
+	    <p>
+		Finally, by the time I was ready to create a website to host my project I also realized that my element set was lacking in a few ways. Some of my elements needed wrappers, some needed to be mandatory instead of optional, some elements weren’t needed at all, and some elements had to be added. I think the fact that I was able to see and correct these problems is a great indication of how much I’ve learned. 
+	    </p>
+	    <p>
+		At this point I feel a lot more confident in my understanding of what metadata, how it works, and how I can use it. 
+	    </p>
     </div>
     <div id="footer">
         Created by Yasmin Stoss | design template by imfunniee <br> <a href="https://imfunniee.github.io">imfunniee</a>
