update #6 element spec URI

--- a/index.html
+++ b/index.html
@@ -312,7 +312,8 @@ I decided to create a new application profile because I could not find a pre-exi
 										</tr>
 										<tr>
 											<td>URI</td>
-											<td>https://www.getty.edu/research/publications/electronic_publications/cdwa/indexingmaterialstechniquesset </td>
+											<td>https://www.getty.edu/research/publications/ electronic_publications/cdwa/ 
+												indexingmaterialstechniquesset </td>
 										</tr>
 										<tr>
 											<td>Definition</td>
