update #12 element spec URI

--- a/index.html
+++ b/index.html
@@ -583,7 +583,8 @@ I decided to create a new application profile because I could not find a pre-exi
 										</tr>
 										<tr>
 											<td>URI</td>
-											<td>https://www.getty.edu/research/publications/electronic_publications/cdwa/indexingmeasurementsset  </td>
+											<td>https://www.getty.edu/research/publications/electronic_publications/
+												cdwa/indexingmeasurementsset  </td>
 										</tr>
 										<tr>
 											<td>Definition</td>
