--- a/index.html
+++ b/index.html
@@ -629,7 +629,8 @@ I decided to create a new application profile because I could not find a pre-exi
 										</tr>
 										<tr>
 											<td>URI</td>
-											<td>https://www.getty.edu/research/publications/electronic_publications/cdwa/displaymaterialstech </td>
+											<td>https://www.getty.edu/research/publications/electronic_publications/
+												cdwa/displaymaterialstech </td>
 										</tr>
 										<tr>
 											<td>Definition</td>
