--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header id="header" class="animated slideInDown" style="animation-delay:1.8s;">
         <table>
             <tr>
-                <td id="logo">DIY guides metadata</td>
+                <td id="logo"></td>
                 <td id="navigation">
                     <a href="#domain">Domain</a>
                     <a href="#elements">Elements</a>
