make table id="spec-table"

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#1</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
