changed element and vocab tables to use spec-table

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ I decided to create a new application profile because I could not find a pre-exi
         <h1>Element Specification</h1>
         <!-- Table -->
 						<section>
-							<h2>#1</h2>
+							<h3>#1</h3>
 							<div>
 								<table id="spec-table">
 									<thead>
@@ -112,7 +112,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#2</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
@@ -157,7 +157,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#3</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
@@ -202,7 +202,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#4</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
@@ -247,7 +247,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#5</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
@@ -292,7 +292,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#6</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
@@ -338,7 +338,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#7</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
@@ -383,7 +383,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#8</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
@@ -428,7 +428,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#9</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
@@ -473,7 +473,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#10</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
@@ -518,7 +518,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#11</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
@@ -563,7 +563,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#12</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
@@ -609,7 +609,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#13</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
@@ -655,7 +655,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#14</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
@@ -700,7 +700,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#15</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
@@ -745,7 +745,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#16</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
@@ -790,7 +790,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#17</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
@@ -839,7 +839,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#1</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
@@ -880,7 +880,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#2</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
@@ -921,7 +921,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#3</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
@@ -962,7 +962,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#4</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
@@ -1003,7 +1003,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#5</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
@@ -1044,7 +1044,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#6</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
@@ -1085,7 +1085,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#7</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
@@ -1126,7 +1126,7 @@ I decided to create a new application profile because I could not find a pre-exi
 						<section>
 							<h2>#8</h2>
 							<div>
-								<table class="w3-table w3-striped">
+								<table id="spec-table">
 									<thead>
 										<tr>
 											<th></th>
