--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@ I decided to create a new application profile because I could not find a pre-exi
 										</tr>
 										<tr>
 											<td>Label</td>
-											<td>SDescription</td>
+											<td>Description</td>
 										</tr>
 										<tr>
 											<td>URI</td>
