add namespace xsd files to downloads

--- a/index.html
+++ b/index.html
@@ -1171,17 +1171,15 @@ I decided to create a new application profile because I could not find a pre-exi
 		<a href="https://zyas19.github.io/Assignment4Schema_Stoss3.xsd">XSD schema file</a>
         </p>
 	<p>
-		<a href="">Dublin Core XSD file</a>
-	</p>	
-	    <table>
-		    <thead>
-			    <tr>
-				    <th>Namespace XSD files<th>
-			    </tr>
-		    <tr>
-			    <td><a href="">associated Dublin Core XSD file</a><td>
-		    </tr>  
-	    </table>
+		<a href="https://zyas19.github.io/dc.xsd">Dublin Core XSD file</a>
+	</p>
+	    <p>
+		    <a href="https://zyas19.github.io/cdwalite.xsd">CDWALite XSD file</a>
+	    </p>
+	    <p>
+		    <a href="https://zyas19.github.io/utk.xsd">UTK local XSD file</a>
+	    </p>
+	   
         <p>
 		<a href="">XML file</a>
         </p>
