add "created by me" to header!

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <tr>
             <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
                 <h1>A metadata application profile for a DIY guides website</h1>
+		    <h3>Created by Yasmin Stoss</h3>
             </td>
             <td id="rightImage" class="animated jackInTheBox" style="animation-delay:2.2s;"></td>
         </tr>
