remove width style from 2 element spec tables
see if the style info (width) is messing with style info from the css file
width="30%"

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ I decided to create a new application profile because I could not find a pre-exi
 									</thead>
 									<tbody>
 										<tr>
-											<td width="30%">Name</td>
+											<td>Name</td>
 											<td>creator</td>	
 										</tr>
 										<tr>
@@ -122,7 +122,7 @@ I decided to create a new application profile because I could not find a pre-exi
 									</thead>
 									<tbody>
 										<tr>
-											<td width="30%">Name</td>
+											<td>Name</td>
 											<td>subject</td>	
 										</tr>
 										<tr>
