add link to XML example file

--- a/index.html
+++ b/index.html
@@ -1182,7 +1182,7 @@ I decided to create a new application profile because I could not find a pre-exi
 	    </p>
 	   
         <p>
-		<a href="">XML file</a>
+		<a href="https://zyas19.github.io/FinalXMLExample_Stoss.xml">XML file</a>
         </p>
     </div>
     <div id="essay">
