remove animation from #about
class="animated slideInLeft" style="animation-delay:2s;"

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </header>
     <table id="top_part">
         <tr>
-            <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
+            <td id="about">
                 <h1>A metadata application profile for a DIY guides website</h1>
 		    <h3>Created by Yasmin Stoss</h3>
             </td>
